objects/Account_Sites__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account, Partner-Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sites (Account)</relationshipLabel>
        <relationshipName>Account_Hierarchy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <formula>TEXT(Account__r.Channel_Type__c )</formula>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account__r.Country__r.Name</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/006/e?retURL=%2F&quot; &amp;  Account__r.Id  &amp; &quot;&amp;accid=&quot; &amp; Account__r.Id &amp; &quot;&amp;opp3=&quot; &amp;  Account__r.Name , IMAGE(&quot;/resource/New_Opportunity_Button&quot;, &quot;Create Opportunity &quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Address__c &amp; IF(Address__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Account__r.Address_2__c &amp; IF(Account__r.Address_2__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Account__r.Address_3__c &amp; IF(Account__r.Address_3__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Account__r.Address_4__c &amp; IF(Account__r.Address_4__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp;  City__c &amp; IF(City__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; IF(Country__c=&quot;Japan&quot;,Account__r.County__c &amp; IF(Account__r.County__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;),&quot;&quot;) &amp; State__c &amp; IF(State__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Zip_Code__c &amp; IF(Zip_Code__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sites</relationshipLabel>
        <relationshipName>Account_Hierarchy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <formula>Account__r.SAP_Customer_ID_Mask__c</formula>
        <label>SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.State_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Account__r.Status__c )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique identifier. Account Id _ Parent Account Id</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account__r.Postal_Code__c</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Account Sites</label>
    <nameField>
        <displayFormat>AH-{0}</displayFormat>
        <label>Account Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>